---------------------------------------------------------------------------------------------------
Version: 1.3.11
Date: 2022-06-?
  Changes:
      - Creep miners acid defense reduced.
---------------------------------------------------------------------------------------------------
Version: 1.3.10
Date: 2022-05-16
  Changes:
      - Creep miner pollution re-design. Emission takes place while miner is working, not at the moment of creep excavation.
      Customized miner pollution coefficient setting value (recommended for DeathWorld games) can be found in Startup settings.
      - Fixed false counter strikes triggered effects.
---------------------------------------------------------------------------------------------------
Version: 1.3.9
Date: 2022-05-08
  Changes:
      - Creep miners range circle render improved: miners ghosts ranges are shown, creep meter in hands unhides this rendering too.
      - Creep miner has got a limit of tiles excavation queue in standby reserve.
      - Creep miner balance. Reduced enemies protection for biomass creep (biters don't protect it anymore, miner blocking range is 1.5 chunk)
      - Updated counter-strike's one-time damage.
      - Decreased DoT corrosion damage for less damaged buildings.
---------------------------------------------------------------------------------------------------
Version: 1.3.8
Date: 2022-04-02
  Changes:
      - Mod settings were added.
      Biters reseach data (BRD) recipe biomass ingredient by default is 7. Use value 4 for double technology price or when playing less aggressive enemies worlds.
      To change BRD startup setting Factorio app restart is required. Old games will use it at next load of saved game.
      - CLI mod settings are removed. Loading old game imports them into mod settings UI.
      - Creep miner goes to sleep immediately on last creep tile harvested.
      - Corrosion marginal case fix.
      - +0.5% corrosion DoT.