@@ -3,6 +3,8 @@ Version: 1.3.11
 Date: 2022-06-?
   Changes:
       - Creep miners acid defense reduced.
+      - Warfare expandables recipes switched from biomass to bio residue. RA shield MK3 too.
+      - Fixed bio residue pictures.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.10
 Date: 2022-05-16
